JQuery plugin added

--- a/index/index.html
+++ b/index/index.html
@@ -18,12 +18,22 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- bootstrap cdn -->
-    <!-- custom CSS & JS -->
-    <link rel="stylesheet" href="../assets/style.css">
-    <script src="../assets/script.js"></script>
-    <!-- custom CSS & JS -->
+
+		<!-- JQuery  -->
+		<script
+			src="https://code.jquery.com/jquery-2.2.4.min.js"
+			integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+			crossorigin="anonymous"
+		></script>
+		<!-- JQuery  -->
+
+
+		<!-- custom CSS & JS -->
+		<link rel="stylesheet" href="../assets/style.css" />
+		<script src="../assets/script.js"></script>
+		<!-- custom CSS & JS -->
 	</head>
-	<body >
-    hello
-  </body>
+	<body>
+    
+	</body>
 </html>
