--- a/index/index.html
+++ b/index/index.html
@@ -33,7 +33,13 @@
 		<script src="../assets/script.js"></script>
 		<!-- custom CSS & JS -->
 	</head>
-	<body>
-    
+	<body class="bg-light">
+    <div class="container">
+      <section id="langing_home">
+        <div class="landing">
+          
+        </div>
+      </section>
+    </div>
 	</body>
 </html>
