--- a/index/index.html
+++ b/index/index.html
@@ -27,19 +27,22 @@
 		></script>
 		<!-- JQuery  -->
 
-
 		<!-- custom CSS & JS -->
 		<link rel="stylesheet" href="../assets/style.css" />
 		<script src="../assets/script.js"></script>
 		<!-- custom CSS & JS -->
 	</head>
 	<body class="bg-light">
-    <div class="container">
-      <section id="langing_home">
-        <div class="landing">
-          
-        </div>
-      </section>
-    </div>
+		<div class="container shadow-sm px-0">
+			<section id="langing_home">
+				<div class="landing border-bottom border-danger position-relative">
+					<div class="card cardWH position-absolute" >
+						<div class="card-body">
+							
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 	</body>
 </html>
