--- a/index/index.html
+++ b/index/index.html
@@ -32,11 +32,11 @@
 		<script src="../assets/script.js"></script>
 		<!-- custom CSS & JS -->
 	</head>
-	<body class="bg-light">
+	<body class="bg-light"> 
 		<div class="container shadow-sm px-0">
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
-					<div class="card cardWH position-absolute" >
+					<div class="card cardWH position-absolute shadow-sm" >
 						<div class="card-body">
 							
 						</div>
