--- a/index/index.html
+++ b/index/index.html
@@ -42,8 +42,8 @@
 						</div>
 					</div>
 				</div>
-        <div>
-          
+        <div class="d-flex justify-content-center pt-6">
+          <h1 class="primary">شنطة اللمسة الملكية</h1>
         </div>
 			</section>
       
