--- a/index/index.html
+++ b/index/index.html
@@ -43,7 +43,7 @@
 					</div>
 				</div>
         <div class="d-flex justify-content-center pt-6">
-          <h1 class="primary">شنطة اللمسة الملكية</h1>
+          <h1 class="primary font-bold">شنطة اللمسة الملكية</h1>
         </div>
 			</section>
       
