--- a/index/index.html
+++ b/index/index.html
@@ -43,7 +43,11 @@
 					</div>
 				</div>
         <div class="d-flex justify-content-center pt-6">
-          <h1 class="primary font-bold">شنطة اللمسة الملكية</h1>
+          <h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
+        </div>
+        <hr class="mx-5">
+        <div class="d-flex justify-content-center">
+          <h1 class="primary">توصيل مجاني</h1>
         </div>
 			</section>
       
