--- a/index/index.html
+++ b/index/index.html
@@ -32,25 +32,30 @@
 		<script src="../assets/script.js"></script>
 		<!-- custom CSS & JS -->
 	</head>
-	<body class="bg-light"> 
+	<body class="bg-light">
 		<div class="container shadow-sm px-0">
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
-					<div class="card cardWH position-absolute shadow-sm" >
+					<div class="card cardWH position-absolute shadow-sm">
 						<div class="card-body px-0 py-0">
-							<img src="../images/logo (2).png" alt="logo" width="100px">
+							<img src="../images/logo (2).png" alt="logo" width="100px" />
 						</div>
 					</div>
 				</div>
-        <div class="d-flex justify-content-center pt-6">
-          <h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
-        </div>
-        <hr class="mx-5">
-        <div class="d-flex justify-content-center">
-          <h1 class="primary">توصيل مجاني</h1>
-        </div>
+				<div class="d-flex justify-content-center pt-6">
+					<h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
+				</div>
+				<hr class="mx-5" />
+				<div class="d-flex justify-content-center">
+					<h1 class="primary">توصيل مجاني</h1>
+				</div>
+
+				<div class="bg-gray position-relative d-flex justify-content-between p-3">
+					<p class="primary mb-0"><span class="font-bold fs-6">5047</span> : الأشخاص المقدمون</p>
+					<div class="position-absolute"></div>
+					<p class="primary mb-0"><span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت</p>
+				</div>
 			</section>
-      
 		</div>
 	</body>
 </html>
