--- a/index/index.html
+++ b/index/index.html
@@ -12,24 +12,21 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-			crossorigin="anonymous"
-		></script>
+
 		<!-- bootstrap cdn -->
 
 		<!-- JQuery  -->
-		<script
-			src="https://code.jquery.com/jquery-2.2.4.min.js"
-			integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-			crossorigin="anonymous"
-		></script>
+
 		<!-- JQuery  -->
+
+		<!-- countdown -->
+
+		<link rel="stylesheet" type="text/css" href="../assets/jquery.flipcountdown.css" />
+		<!-- end of countdown -->
 
 		<!-- custom CSS & JS -->
 		<link rel="stylesheet" href="../assets/style.css" />
-		<script src="../assets/script.js"></script>
+
 		<!-- custom CSS & JS -->
 	</head>
 	<body class="bg-light">
@@ -50,12 +47,49 @@
 					<h1 class="primary">توصيل مجاني</h1>
 				</div>
 
-				<div class="bg-gray position-relative d-flex justify-content-between p-3">
+				<div class="bg-gray position-relative d-flex justify-content-between p-3 mt-5">
 					<p class="primary mb-0"><span class="font-bold fs-6">5047</span> : الأشخاص المقدمون</p>
-					<div class="position-absolute"></div>
-					<p class="primary mb-0"><span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت</p>
+					<div class="card position-absolute WH bg-primary">
+						<div
+							class="card-body px-0 py-0 d-flex justify-content-center flex-column align-items-center"
+						>
+							<p class="mb-0 fs-1 font-bold" style="direction: rtl">
+								<span class="">179</span> د.إ.
+							</p>
+							<div class="d-flex justify-content-around w-100 mb-1">
+								<span class="badge rounded-pill bg-danger mt-1 h-50">
+									<p class="mb-0" style="direction: rtl"><span class="">%50 - </span>خصم</p>
+								</span>
+								<p class="mb-0 text-decoration-line-through fs-6" style="direction: rtl">
+									<span class="">358</span> د.إ.
+								</p>
+							</div>
+						</div>
+					</div>
+					<p class="primary mb-0">
+						<span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت
+					</p>
+				</div>
+
+				<div>
+					<div id="flipcountdownbox1"></div>
 				</div>
 			</section>
 		</div>
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
+		<script type="text/javascript" src="../assets/jquery.min.js"></script>
+		<script type="text/javascript" src="../assets/jquery.flipcountdown.js"></script>
+		<script src="../assets/script.js"></script>
 	</body>
 </html>
