--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 	
 		
 		<!-- custom CSS & JS -->
-		<link rel="stylesheet" type="text/css" href="../assets/jquery.flipcountdown.css" />
+		
 		<link rel="stylesheet" href="../assets/style.css" />
 
 		<!-- custom CSS & JS -->
@@ -26,8 +26,8 @@
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
 					<div class="card cardWH position-absolute shadow-sm">
-						<div class="card-body px-0 py-0">
-							<img src="../images/logo (2).png" alt="logo" width="100px" />
+						<div class="card-body px-0 py-0 d-flex justify-content-center align-items-center">
+							<img src="../images/logo1.png" alt="logo" width="70px"  />
 						</div>
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 				</div>
 
 				<div>
-					<div id="flipcountdownbox1"></div>
+					
 				</div>
 			</section>
 		</div>
@@ -81,7 +81,6 @@
 			crossorigin="anonymous"
 		></script>
 		<script type="text/javascript" src="../assets/jquery.min.js"></script>
-		<script type="text/javascript" src="../assets/jquery.flipcountdown.js"></script>
 		<script src="../assets/script.js"></script>
 
 		
