--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 			crossorigin="anonymous"
 		/>
 
-	
-		
 		<!-- custom CSS & JS -->
-		
-		<link rel="stylesheet" href="../assets/style.css" />
+
+		<link rel="stylesheet" href="./assets/style.css" />
 
 		<!-- custom CSS & JS -->
 	</head>
@@ -26,21 +24,29 @@
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
 					<div class="card cardWH position-absolute shadow-sm">
-						<div class="card-body px-0 py-0 d-flex justify-content-center align-items-center">
-							<img src="../images/logo1.png" alt="logo" width="70px"  />
+						<div
+							class="card-body px-0 py-0 d-flex justify-content-center align-items-center"
+						>
+							<img src="./images/logo1.png" alt="logo" width="70px" />
 						</div>
 					</div>
 				</div>
 				<div class="d-flex justify-content-center pt-6">
-					<h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
+					<h1 class="primary font-bold font-size-5 mb-0">
+						شنطة اللمسة الملكية
+					</h1>
 				</div>
 				<hr class="mx-5" />
 				<div class="d-flex justify-content-center">
 					<h1 class="primary">توصيل مجاني</h1>
 				</div>
 
-				<div class="bg-gray position-relative d-flex justify-content-between p-3 mt-5">
-					<p class="primary mb-0"><span class="font-bold fs-6">5047</span> : الأشخاص المقدمون</p>
+				<div
+					class="bg-gray position-relative d-flex justify-content-between p-3 mt-5"
+				>
+					<p class="primary mb-0">
+						<span class="font-bold fs-6">5047</span> : الأشخاص المقدمون
+					</p>
 					<div class="card position-absolute WH bg-primary">
 						<div
 							class="card-body px-0 py-0 d-flex justify-content-center flex-column align-items-center"
@@ -50,9 +56,14 @@
 							</p>
 							<div class="d-flex justify-content-around w-100 mb-1">
 								<span class="badge rounded-pill bg-danger mt-1 h-50">
-									<p class="mb-0" style="direction: rtl"><span class="">%50 - </span>خصم</p>
+									<p class="mb-0" style="direction: rtl">
+										<span class="">%50 - </span>خصم
+									</p>
 								</span>
-								<p class="mb-0 text-decoration-line-through fs-6" style="direction: rtl">
+								<p
+									class="mb-0 text-decoration-line-through fs-6"
+									style="direction: rtl"
+								>
 									<span class="">358</span> د.إ.
 								</p>
 							</div>
@@ -63,9 +74,7 @@
 					</p>
 				</div>
 
-				<div>
-					
-				</div>
+				<div></div>
 			</section>
 		</div>
 		<br />
@@ -80,9 +89,6 @@
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 			crossorigin="anonymous"
 		></script>
-		<script type="text/javascript" src="../assets/jquery.min.js"></script>
-		<script src="../assets/script.js"></script>
-
-		
+		<script src="./assets/script.js"></script>
 	</body>
 </html>
