--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
 			</section>
 			<section>
-				<div></div>
+				<div class="bg-gray mt-2 text-center">
+						<h2>معلومات عامة</h2>
+				</div>
 			</section>
 		</div>
 		<br />
