--- a/index.html
+++ b/index.html
@@ -24,48 +24,31 @@
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
 					<div class="card cardWH position-absolute shadow-sm">
-						<div
-							class="card-body px-0 py-0 d-flex justify-content-center align-items-center"
-						>
+						<div class="card-body px-0 py-0 d-flex justify-content-center align-items-center">
 							<img src="./images/logo1.png" alt="logo" width="70px" />
 						</div>
 					</div>
 				</div>
 				<div class="d-flex justify-content-center pt-6">
-					<h1 class="primary font-bold font-size-5 mb-0">
-						شنطة اللمسة الملكية
-					</h1>
+					<h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
 				</div>
 				<hr class="mx-5" />
 				<div class="d-flex justify-content-center">
 					<h1 class="primary">توصيل مجاني</h1>
 				</div>
 
-				<div
-					class="bg-gray position-relative d-flex justify-content-between p-3 mt-5"
-				>
-					<p class="primary mb-0">
-						<span class="font-bold fs-6">5047</span> : الأشخاص المقدمون
-					</p>
+				<div class="bg-gray position-relative d-flex justify-content-between p-3 mt-5">
+					<p class="primary mb-0"><span class="font-bold fs-6">5047</span> : الأشخاص المقدمون</p>
 					<div class="card position-absolute WH bg-primary">
 						<div
 							class="card-body px-0 py-0 d-flex justify-content-center flex-column align-items-center"
 						>
-							<p class="mb-0 fs-1 font-bold" style="direction: rtl">
-								<span class="">179</span> د.إ.
-							</p>
+							<p class="mb-0 fs-1 font-bold"><span class="">179</span> د.إ.</p>
 							<div class="d-flex justify-content-around w-100 mb-1">
 								<span class="badge rounded-pill bg-danger mt-1 h-50">
-									<p class="mb-0" style="direction: rtl">
-										<span class="">%50 - </span>خصم
-									</p>
+									<p class="mb-0"><span class="">%50 - </span>خصم</p>
 								</span>
-								<p
-									class="mb-0 text-decoration-line-through fs-6"
-									style="direction: rtl"
-								>
-									<span class="">358</span> د.إ.
-								</p>
+								<p class="mb-0 text-decoration-line-through fs-6"><span class="">358</span> د.إ.</p>
 							</div>
 						</div>
 					</div>
@@ -73,11 +56,10 @@
 						<span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت
 					</p>
 				</div>
-
 			</section>
 			<section>
 				<div class="bg-gray mt-2 text-center">
-						<h2>معلومات عامة</h2>
+					<h2>معلومات عامة</h2>
 				</div>
 			</section>
 		</div>
