--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 				</div>
 			</section>
 			<section>
-				<div class="bg-gray mt-2 text-center">
-					<h2>معلومات عامة</h2>
+				<div class="bg-gray mt-2 text-center p-1 boxShadow">
+					<h2 class="font-bold  mb-0">معلومات عامة</h2>
 				</div>
 			</section>
 		</div>
