--- a/index.html
+++ b/index.html
@@ -59,7 +59,46 @@
 			</section>
 			<section>
 				<div class="bg-gray mt-2 text-center p-1 boxShadow">
-					<h2 class="font-bold  mb-0">معلومات عامة</h2>
+					<h2 class="font-bold mb-0">معلومات عامة</h2>
+				</div>
+
+				<div class="bg-white px-5 pt-4 pb-3">
+					<div class="mb-3">
+						<label for="name" class="form-label mb-0 font-bold fs-6">الاسم</label>
+						<input
+							type="text"
+							class="form-control"
+							id="name"
+							placeholder="نسیم غلی زی"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="location" class="form-label mb-0 font-bold fs-6">منطقة</label>
+						<input
+							type="text"
+							class="form-control"
+							id="location"
+							placeholder="دبي"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="address" class="form-label mb-0 font-bold fs-6">عنوان</label>
+						<input
+							type="text"
+							class="form-control"
+							id="address"
+							placeholder="شقة ، جناح ، وحدة ، بناء"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="phone" class="form-label mb-0 font-bold fs-6">هاتف</label>
+						<input
+							type="text"
+							class="form-control"
+							id="phone"
+							placeholder="0501234567"
+						/>
+					</div>
 				</div>
 			</section>
 		</div>
