--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</p>
 				</div>
 			</section>
-			<section>
+			<section class="boxShadowd">
 				<div class="bg-gray mt-2 text-center p-1 boxShadow">
 					<h2 class="font-bold mb-0">معلومات عامة</h2>
 				</div>
