--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<!-- custom CSS & JS -->
 	</head>
-	<body class="bg-light">
+	<body class="bg-white">
 		<div class="container shadow-sm px-0">
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
@@ -65,21 +65,11 @@
 				<div class="bg-white px-5 pt-4 pb-3">
 					<div class="mb-3">
 						<label for="name" class="form-label mb-0 font-bold fs-6">الاسم</label>
-						<input
-							type="text"
-							class="form-control"
-							id="name"
-							placeholder="نسیم غلی زی"
-						/>
+						<input type="text" class="form-control" id="name" placeholder="نسیم علی زی" />
 					</div>
 					<div class="mb-3">
 						<label for="location" class="form-label mb-0 font-bold fs-6">منطقة</label>
-						<input
-							type="text"
-							class="form-control"
-							id="location"
-							placeholder="دبي"
-						/>
+						<input type="text" class="form-control" id="location" placeholder="دبي" />
 					</div>
 					<div class="mb-3">
 						<label for="address" class="form-label mb-0 font-bold fs-6">عنوان</label>
@@ -92,13 +82,114 @@
 					</div>
 					<div class="mb-3">
 						<label for="phone" class="form-label mb-0 font-bold fs-6">هاتف</label>
-						<input
-							type="text"
-							class="form-control"
-							id="phone"
-							placeholder="0501234567"
-						/>
+						<input type="text" class="form-control" id="phone" placeholder="0501234567" />
 					</div>
+				</div>
+			</section>
+			<section class="mt-5">
+				<div class="mb-3 px-5">
+					<h2 class="font-bold fs-4">معلومات المنتج</h2>
+					<span class="text-muted">
+						<p class="fs-5 mb-0">مجموعه المعالي vip</p>
+						<p class="fs-5 mb-0">مجموعه حصريه تحتوي على</p>
+						<p class="fs-5 mb-0">بخور الغزال بحجم 150 جرام</p>
+						<p class="fs-5 mb-0">مبخره حديثه الاصدار</p>
+						<p class="fs-5 mb-0">فحم رينمبو سريع الاشتعال</p>
+					</span>
+				</div>
+
+				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-indicators">
+						<button
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide-to="0"
+							class="active"
+							aria-current="true"
+							aria-label="Slide 1"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide-to="1"
+							aria-label="Slide 2"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide-to="2"
+							aria-label="Slide 3"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide-to="3"
+							aria-label="Slide 4"
+						></button>
+						<button
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide-to="4"
+							aria-label="Slide 5"
+						></button>
+					</div>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
+						</div>
+						<div class="carousel-item">
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
+						</div>
+						<div class="carousel-item">
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
+						</div>
+						<div class="carousel-item">
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
+						</div>
+						<div class="carousel-item">
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
+						</div>
+					</div>
+					<button
+						class="carousel-control-prev"
+						type="button"
+						data-bs-target="#carouselExampleIndicators"
+						data-bs-slide="prev"
+					>
+						<span class="customBorder" aria-hidden="true">
+							<svg
+								style="width: 10px"
+								fill="#fff"
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 320 512"
+							>
+								<!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
+								<path
+									d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
+								/>
+							</svg>
+						</span>
+					</button>
+					<button
+						class="carousel-control-next"
+						type="button"
+						data-bs-target="#carouselExampleIndicators"
+						data-bs-slide="next"
+					>
+						<span class="customBorder" aria-hidden="true">
+							<svg
+								style="width: 10px"
+								fill="#fff"
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 320 512"
+							>
+								<!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
+								<path
+									d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
+								/>
+							</svg>
+						</span>
+					</button>
 				</div>
 			</section>
 		</div>
