--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					</span>
 				</div>
 
-				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div id="carouselExampleIndicators" class="carousel slide mb-2" data-bs-ride="carousel">
 					<div class="carousel-indicators">
 						<button
 							type="button"
@@ -190,6 +190,10 @@
 							</svg>
 						</span>
 					</button>
+				</div>
+
+				<div class="d-flex flex-row">
+					<button type="button" class="btn btn-custom btn-lg">Submit</button>
 				</div>
 			</section>
 		</div>
