--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					</span>
 				</div>
 
-				<div id="carouselExampleIndicators" class="carousel slide mb-2" data-bs-ride="carousel">
+				<div id="carouselExampleIndicators" class="carousel slide mb-4" data-bs-ride="carousel">
 					<div class="carousel-indicators">
 						<button
 							type="button"
@@ -192,18 +192,12 @@
 					</button>
 				</div>
 
-				<div class="d-flex flex-row">
-					<button type="button" class="btn btn-custom btn-lg">Submit</button>
+				<div class="text-center pb-4">
+					<button type="button" class="btn btn-success mx-2 btn-lg w-15 shadow-sm">Submit</button>
+					<button type="button" class="btn btn-custom mx-2 btn-lg w-75 shadow-sm">Submit</button>
 				</div>
 			</section>
 		</div>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
