--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- custom CSS & JS -->
 
-		<link rel="stylesheet" href="../assets/style.css" />
+		<link rel="stylesheet" href="./assets/style.css" />
 
 		<!-- custom CSS & JS -->
 	</head>
@@ -25,7 +25,7 @@
 				<div class="landing border-bottom border-danger position-relative">
 					<div class="card cardWH position-absolute shadow-sm">
 						<div class="card-body px-0 py-0 d-flex justify-content-center align-items-center">
-							<img src="../images/logo1.png" alt="logo" width="70px" />
+							<img src="./images/logo1.png" alt="logo" width="70px" />
 						</div>
 					</div>
 				</div>
@@ -135,19 +135,19 @@
 					</div>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="../images/1.png" class="d-block w-100" alt="..." />
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="../images/1.png" class="d-block w-100" alt="..." />
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="../images/1.png" class="d-block w-100" alt="..." />
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="../images/1.png" class="d-block w-100" alt="..." />
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="../images/1.png" class="d-block w-100" alt="..." />
+							<img src="./images/1.png" class="d-block w-100" alt="..." />
 						</div>
 					</div>
 					<button
@@ -203,6 +203,6 @@
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 			crossorigin="anonymous"
 		></script>
-		<script src="../assets/script.js"></script>
+		<script src="./assets/script.js"></script>
 	</body>
 </html>
