--- a/AR/index.html
+++ b/AR/index.html
@@ -193,7 +193,7 @@
 				</div>
 
 				<div class="text-center pb-4">
-					<a href="" class="btn btn-success mx-2 btn-lg w-15 shadow-sm px-4">
+					<a href="https://wa.me/+93748418765" target="_blank" class="btn btn-success mx-2 btn-lg w-15 shadow-sm px-4">
 						<svg
 							style="width: 26px"
 							fill="white"
