--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,9 +7,9 @@
 		<title>landing</title>
 		<!-- bootstrap cdn -->
 		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.rtl.min.css"
-			integrity="sha384-+4j30LffJ4tgIMrq9CwHvn0NjEvmuDCOfk6Rpg2xg7zgOxWWtLtozDEEVvBPgHqE"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
 
@@ -30,71 +30,70 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-center pt-6">
-					<h1 class="primary font-bold font-size-5 mb-0">شنطة اللمسة الملكية</h1>
+					<h1 class="primary font-bold font-size-5 mb-0">Allmst Almalakia Bag</h1>
 				</div>
 				<hr class="mx-5" />
 				<div class="d-flex justify-content-center">
-					<h1 class="primary">توصيل مجاني</h1>
+					<h1 class="primary">Free Delivery</h1>
 				</div>
 
 				<div class="bg-gray position-relative d-flex justify-content-between p-3 mt-5">
-					<p class="primary mb-0"><span class="font-bold fs-6">5047</span> : الأشخاص المقدمون</p>
+					<p class="primary mb-0">Online People : <span class="font-bold fs-6">0872</span></p>
+
 					<div class="card position-absolute WH bg-primary">
 						<div
 							class="card-body px-0 py-0 d-flex justify-content-center flex-column align-items-center"
 						>
-							<p class="mb-0 fs-1 font-bold"><span class="">179</span> د.إ.</p>
+							<p class="mb-0 fs-1 font-bold"><span class="">179 </span> AED</p>
 							<div class="d-flex justify-content-around w-100 mb-1">
-								<p class="mb-0 text-decoration-line-through fs-6"><span class="">358</span> د.إ.</p>
-								<span class="badge rounded-pill bg-danger mt-1 h-50">
-									<p class="mb-0"><span class="">%50 - </span>خصم</p>
+								<span class="badge rounded-pill bg-custom mt-1 h-50">
+									<p class="mb-0"><span class="">%50 - </span>off</p>
 								</span>
+								<p class="mb-0 text-decoration-line-through fs-6"><span class="">358</span> AED</p>
 							</div>
 						</div>
 					</div>
-					<p class="primary mb-0">
-						<span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت
-					</p>
+					<p class="primary mb-0">Submited People : <span class="font-bold fs-6">5047</span></p>
 				</div>
 			</section>
 			<section class="boxShadowd">
 				<div class="bg-gray mt-2 text-center p-1 boxShadow">
-					<h2 class="font-bold mb-0">معلومات عامة</h2>
+					<h2 class="font-bold mb-0">General Information</h2>
 				</div>
 
 				<div class="bg-white px-5 pt-4 pb-3">
 					<div class="mb-3">
-						<label for="name" class="form-label mb-0 font-bold fs-6">الاسم</label>
-						<input type="text" class="form-control" id="name" placeholder="نسیم علی زی" />
+						<label for="name" class="form-label mb-0 font-bold fs-6">Full Name</label>
+						<input type="text" class="form-control" id="name" placeholder="Nasim Alizai" />
 					</div>
 					<div class="mb-3">
-						<label for="location" class="form-label mb-0 font-bold fs-6">منطقة</label>
-						<input type="text" class="form-control" id="location" placeholder="دبي" />
+						<label for="location" class="form-label mb-0 font-bold fs-6">Region</label>
+						<input type="text" class="form-control" id="location" placeholder="Dubai" />
 					</div>
 					<div class="mb-3">
-						<label for="address" class="form-label mb-0 font-bold fs-6">عنوان</label>
+						<label for="address" class="form-label mb-0 font-bold fs-6">Address</label>
 						<input
 							type="text"
 							class="form-control"
 							id="address"
-							placeholder="شقة ، جناح ، وحدة ، بناء"
+							placeholder="Apartment, suite, unit, building"
 						/>
 					</div>
 					<div class="mb-3">
-						<label for="phone" class="form-label mb-0 font-bold fs-6">هاتف</label>
+						<label for="phone" class="form-label mb-0 font-bold fs-6">Phone</label>
 						<input type="text" class="form-control" id="phone" placeholder="0501234567" />
 					</div>
 				</div>
 			</section>
 			<section class="mt-5">
 				<div class="mb-3 px-5">
-					<h2 class="font-bold fs-4">معلومات المنتج</h2>
+					<h2 class="font-bold fs-4">Product Information</h2>
 					<span class="text-muted">
-						<p class="fs-5 mb-0">مجموعه المعالي vip</p>
-						<p class="fs-5 mb-0">مجموعه حصريه تحتوي على</p>
-						<p class="fs-5 mb-0">بخور الغزال بحجم 150 جرام</p>
-						<p class="fs-5 mb-0">مبخره حديثه الاصدار</p>
-						<p class="fs-5 mb-0">فحم رينمبو سريع الاشتعال</p>
+						<p class="fs-5 mb-0">Al Maali VIP Group</p>
+						<p class="fs-5 mb-0">An exclusive collection that contains</p>
+						<p class="fs-5 mb-0">Al Ghazal Incense 150gm</p>
+						<p class="fs-5 mb-0">evaporator speaking version</p>
+						<p class="fs-5 mb-0">Renmbo charcoal is highly flammable</p>
 					</span>
 				</div>
 
@@ -165,7 +164,7 @@
 							>
 								<!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
 								<path
-									d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
+									d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
 								/>
 							</svg>
 						</span>
@@ -185,7 +184,7 @@
 							>
 								<!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
 								<path
-									d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
+									d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
 								/>
 							</svg>
 						</span>
@@ -193,6 +192,7 @@
 				</div>
 
 				<div class="text-center pb-4">
+					<button type="button" class="btn btn-custom mx-2 btn-lg w-75 shadow-sm">Submit</button>
 					<a
 						href="https://wa.me/+93748418765"
 						target="_blank"
@@ -210,7 +210,6 @@
 							/>
 						</svg>
 					</a>
-					<button type="button" class="btn btn-custom mx-2 btn-lg w-75 shadow-sm">Submit</button>
 				</div>
 			</section>
 		</div>
