--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="./compiled/flipclock.css" />
 
 		<!-- custom CSS & JS -->
 
@@ -55,6 +56,8 @@
 					</div>
 					<p class="primary mb-0">Submited People : <span class="font-bold fs-6">5047</span></p>
 				</div>
+				<div class="clock" style="margin: 2em"></div>
+				<div class="message"></div>
 			</section>
 			<section class="boxShadowd">
 				<div class="bg-gray mt-2 text-center p-1 boxShadow">
@@ -218,6 +221,9 @@
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 			crossorigin="anonymous"
 		></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+		<script src="./compiled/flipclock.js"></script>
 		<script src="./assets/script.js"></script>
 	</body>
 </html>
