--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,25 +7,15 @@
 		<title>landing</title>
 		<!-- bootstrap cdn -->
 		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.rtl.min.css"
+			integrity="sha384-+4j30LffJ4tgIMrq9CwHvn0NjEvmuDCOfk6Rpg2xg7zgOxWWtLtozDEEVvBPgHqE"
 			crossorigin="anonymous"
 		/>
 
-		<!-- bootstrap cdn -->
-
-		<!-- JQuery  -->
-
-		<!-- JQuery  -->
-
-		<!-- countdown -->
-
-		<link rel="stylesheet" type="text/css" href="../assets/jquery.flipcountdown.css" />
-		<!-- end of countdown -->
-
 		<!-- custom CSS & JS -->
-		<link rel="stylesheet" href="../assets/style.css" />
+
+		<link rel="stylesheet" href="./assets/style.css" />
 
 		<!-- custom CSS & JS -->
 	</head>
@@ -34,8 +24,8 @@
 			<section id="langing_home">
 				<div class="landing border-bottom border-danger position-relative">
 					<div class="card cardWH position-absolute shadow-sm">
-						<div class="card-body px-0 py-0">
-							<img src="../images/logo (2).png" alt="logo" width="100px" />
+						<div class="card-body px-0 py-0 d-flex justify-content-center align-items-center">
+							<img src="./images/logo1.png" alt="logo" width="70px" />
 						</div>
 					</div>
 				</div>
@@ -53,16 +43,12 @@
 						<div
 							class="card-body px-0 py-0 d-flex justify-content-center flex-column align-items-center"
 						>
-							<p class="mb-0 fs-1 font-bold" style="direction: rtl">
-								<span class="">179</span> د.إ.
-							</p>
+							<p class="mb-0 fs-1 font-bold"><span class="">179</span> د.إ.</p>
 							<div class="d-flex justify-content-around w-100 mb-1">
+								<p class="mb-0 text-decoration-line-through fs-6"><span class="">358</span> د.إ.</p>
 								<span class="badge rounded-pill bg-danger mt-1 h-50">
-									<p class="mb-0" style="direction: rtl"><span class="">%50 - </span>خصم</p>
+									<p class="mb-0"><span class="">%50 - </span>خصم</p>
 								</span>
-								<p class="mb-0 text-decoration-line-through fs-6" style="direction: rtl">
-									<span class="">358</span> د.إ.
-								</p>
 							</div>
 						</div>
 					</div>
@@ -70,9 +56,49 @@
 						<span class="font-bold fs-6">0872</span> : الأشخاص عبر الإنترنت
 					</p>
 				</div>
+			</section>
+			<section class="boxShadowd">
+				<div class="bg-gray mt-2 text-center p-1 boxShadow">
+					<h2 class="font-bold mb-0">معلومات عامة</h2>
+				</div>
 
-				<div>
-					<div id="flipcountdownbox1"></div>
+				<div class="bg-white px-5 pt-4 pb-3">
+					<div class="mb-3">
+						<label for="name" class="form-label mb-0 font-bold fs-6">الاسم</label>
+						<input
+							type="text"
+							class="form-control"
+							id="name"
+							placeholder="نسیم غلی زی"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="location" class="form-label mb-0 font-bold fs-6">منطقة</label>
+						<input
+							type="text"
+							class="form-control"
+							id="location"
+							placeholder="دبي"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="address" class="form-label mb-0 font-bold fs-6">عنوان</label>
+						<input
+							type="text"
+							class="form-control"
+							id="address"
+							placeholder="شقة ، جناح ، وحدة ، بناء"
+						/>
+					</div>
+					<div class="mb-3">
+						<label for="phone" class="form-label mb-0 font-bold fs-6">هاتف</label>
+						<input
+							type="text"
+							class="form-control"
+							id="phone"
+							placeholder="0501234567"
+						/>
+					</div>
 				</div>
 			</section>
 		</div>
@@ -88,8 +114,6 @@
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 			crossorigin="anonymous"
 		></script>
-		<script type="text/javascript" src="../assets/jquery.min.js"></script>
-		<script type="text/javascript" src="../assets/jquery.flipcountdown.js"></script>
-		<script src="../assets/script.js"></script>
+		<script src="./assets/script.js"></script>
 	</body>
 </html>
