--- a/index/welcome-ar.html
+++ b/index/welcome-ar.html
@@ -52,7 +52,7 @@
                     <img src="../images/Thank U Page.png" class="image" alt="">
                 </div>
                 <div class="row justify-content-center text-center primary">
-                    <a href="index.html" class="btn background-primary btn-home text-white">Home</a>
+                    <a href="index.html" class="btn bg-primary btn-home text-white">Home</a>
                 </div>
                 <div class="row justify-content-center text-center">
                     <div class="footer primary">
